<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:hint="@string/name_input" />

        <TextView
            style="@style/quiz"
            android:text="@string/quiz_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ans_a_quiz_1" />

            <CheckBox
                android:id="@+id/ans_b_quiz_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ans_b_quiz_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/ans_c_quiz_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ans_c_quiz_1" />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ans_d_quiz_1" />
        </LinearLayout>

        <TextView
            style="@style/quiz"
            android:text="@string/quiz_2" />

        <RadioGroup
            android:id="@+id/quiz_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/ans_a_quiz_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_a_quiz_2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_b_quiz_2" />


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_c_quiz_2" />
        </RadioGroup>

        <TextView
            style="@style/quiz"
            android:text="@string/quiz_3" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_a_quiz_3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_b_quiz_3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_c_quiz_3" />

            <RadioButton
                android:id="@+id/ans_d_quiz_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_d_quiz_3" />
        </RadioGroup>

        <TextView
            style="@style/quiz"
            android:text="@string/quiz_4" />

        <EditText
            android:id="@+id/ans_quiz_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:hint="@string/edit_text_instruction"
            android:inputType="text" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="submitAnswer"
            android:background="@android:color/holo_blue_light"
            android:text="@string/submit_button" />
    </LinearLayout>
</ScrollView>